# bazel-mono

./: .bazelignore  .gitignore  .plzconfig  BUILD  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod
projects/backend/: README.md
projects/backend/core-infra/: BUILD  Pulumi.yaml  README.md  package-lock.json  package.json
projects/backend/xcode/: README.md
projects/backend/xfer/: README.md
projects/commands/: README.md
projects/frontend/: README.md
projects/helloGo/: BUILD.bazel  main.go
projects/projectB/: BUILD
src/: BUILD.bazel  main.go
src/greetings/: BUILD  BUILD.bazel  greetings_test.go
tools/: BUILD
