load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "helloGo_lib",
    srcs = ["main.go"],
    importpath = "github.com/tendermint/tendermint/projects/helloGo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "helloGo",
    embed = [":helloGo_lib"],
    visibility = ["//visibility:public"],
)
